syntax = "proto3";
package apis;
option go_package = "./";

service ChatService{
  rpc Register(Account) returns (Account){}
  rpc Login(Account) returns(Account){}
  rpc OnlineUser(null) returns(OnlineUserList){}
  rpc Chat(Account) returns(ChatHistory){}
  rpc ChatRecord(Account) returns(ChatHistory){}
  rpc RevMessage(Account) returns(ChatHistory){}
  rpc LogOut(Account) returns (Account){}
}

message null{}


message OnlineUserList{
  repeated OnlineUser onlineUsers = 1;
}

message OnlineUser{
  int64 account = 2;
  string name = 3;
}

message ChatHistory{
  // @gotags: gorm:"primaryKey;column:id"
  int64 id = 1;
  // @gotags: gorm:"column:talker_account"
  int64 talkerAccount = 2;
  // @gotags: gorm:"column:talker"
  string talker = 3;
  // @gotags: gorm:"column:listener_account"
  int64 listenerAccount = 4;
  // @gotags: gorm:"column:listener"
  string listener = 5;
  // @gotags: gorm:"column:record"
  string  record = 6;
  // @gotags: gorm:"column:create_date"
  string  createDate = 7;
  // @gotags: gorm:"column:is_read"
  int64  isRead = 8;
}

message Account{
  // @gotags: gorm:"primaryKey;column:id"
  int64 id = 1;
  // @gotags: gorm:"primaryKey;column:account"
  int64 account = 2;
  // @gotags: gorm:"column:password"
  string password = 3;
  // @gotags: gorm:"column:name"
  string name = 4;
}

